# plaidml

./: .gitignore  CMakeLists.txt  cmake_requires
base/: CMakeLists.txt
base/config/: CMakeLists.txt
base/context/: CMakeLists.txt
base/eventing/file/: CMakeLists.txt
base/proto/: CMakeLists.txt
base/shim/opencl/: CMakeLists.txt
base/util/: CMakeLists.txt  logging.h  uuid.cc
plaidml2/exec/: BUILD  ffi.cc
pmlc/conversion/stripe_to_affine/: BUILD  convert_stripe_to_affine.cc
pmlc/conversion/stripe_to_spirv/: BUILD  convert_stripe_to_spirv.cc  convert_stripe_to_spirv.h
pmlc/conversion/tests/stripe_affine_roundtrip/: parallel_for.mlir
pmlc/dialect/eltwise/ir/: CMakeLists.txt  ops.cc  util.cc
pmlc/dialect/tile/: lowering.cc  lowering.h
pmlc/util/: CMakeLists.txt
tile/: CMakeLists.txt
tile/base/: CMakeLists.txt
tile/bilp/: CMakeLists.txt
tile/codegen/: CMakeLists.txt
tile/hal/opencl/: CMakeLists.txt  compiler.cc  result.cc
tile/hal/util/: CMakeLists.txt
tile/lang/: CMakeLists.txt
tile/lang/ast/: CMakeLists.txt
tile/lib/: CMakeLists.txt
tile/ocl_exec/: BUILD  CMakeLists.txt  stripe_gen.cc
tile/pmlc/: CMakeLists.txt  pmlc.cc
tile/proto/: CMakeLists.txt
tile/stripe/: CMakeLists.txt
tile/targets/: CMakeLists.txt
tile/targets/cpu/: CMakeLists.txt
tile/util/: CMakeLists.txt
tools/gencfg/: CMakeLists.txt  gencfg.cc
